--- a/contact.css
+++ b/contact.css
@@ -1,12 +1,11 @@
 /* HEADER */
 .background-image-container {
-  background-image: url('contactFirst.png'); 
+  background-image: url("contactFirst.png");
   background-size: cover;
-  background-position: center; 
-  width: 100%; 
+  background-position: center;
+  width: 100%;
   height: 80vh;
   position: relative;
-  
 }
 @keyframes blinker {
   50% {
@@ -18,16 +17,20 @@
   flex-wrap: wrap;
   color: aliceblue;
   position: absolute;
-  margin-left: 50px; font-size: 100px;margin-top: 0;
+  margin-left: 50px;
+  font-size: 100px;
+  margin-top: 0;
 }
 .header2 {
-  margin-top: 200px; color: aliceblue; margin-left: 40px; font-size: 40px;
+  margin-top: 200px;
+  color: aliceblue;
+  margin-left: 40px;
+  font-size: 40px;
 }
 .highlight {
   background-color: rgb(206, 206, 156);
   transition: background-color 0.3s ease;
   animation: blinker 5s ease infinite;
-
 }
 .Container {
   display: flex;
@@ -39,14 +42,13 @@
 }
 .feedback-form-container {
   width: 60%;
-  color:rgb(39, 39, 117) ;
+  color: rgb(39, 39, 117);
   padding: 30px;
   background-color: #eceff2;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.5);
   margin-left: 0;
-  
-
+  font-size: 20px;
 }
 .row {
   display: flex;
@@ -59,28 +61,28 @@
   font-size: 1rem;
   line-height: 1.5;
   display: block;
-  height: calc(2.75rem + 2px);
   padding: 5px;
-  transition: all .2s cubic-bezier(.68, -.55, .265, 1.55);
+  transition: all 0.2s cubic-bezier(0.68, -0.55, 0.265, 1.55);
   color: #8898aa;
   border: 1px solid #cad1d7;
-  border-radius: .375rem;
+  border-radius: 0.375rem;
   background-color: #fff;
   background-clip: padding-box;
   box-shadow: none;
+  text-align: center;
 }
 @media screen and (prefers-reduced-motion: reduce) {
   .form-control {
     transition: none;
   }
-} 
- .form-control::-ms-expand {
+}
+.form-control::-ms-expand {
   border: 0;
   background-color: transparent;
-} 
- .form-control:focus {
+}
+.form-control:focus {
   color: #8898aa;
-  border-color: rgba(50, 151, 211, .25);
+  border-color: rgba(50, 151, 211, 0.25);
   outline: 0;
   background-color: #fff;
   box-shadow: none, none;
@@ -88,7 +90,7 @@
 
 .form-control::placeholder {
   opacity: 1;
-  font-family: 'Times New Roman', Times, serif;
+  font-family: "Times New Roman", Times, serif;
   color: #adb5bd;
 }
 .form-control:disabled,
@@ -98,10 +100,11 @@
 }
 textarea.form-control {
   height: auto;
+  margin: 0 auto;
 }
 textarea {
-  width: 90%; 
-  resize: vertical; 
+  width: 90%;
+  resize: vertical;
 }
 #Low {
   color: green;
@@ -132,58 +135,32 @@ textarea {
 }
 .btn {
   display: inline-block;
-  padding: .625rem 1.25rem;
-  border: 1px  transparent;
-  border-radius: .375rem;
-  font-size:15px; 
+  padding: 0.625rem 1.25rem;
+  border: 1px transparent;
+  border-radius: 0.375rem;
+  font-size: 15px;
   background-color: #adb5bd;
   position: relative;
-  transition: all .15s ease;
-  letter-spacing: .025em;
+  transition: all 0.15s ease;
+  letter-spacing: 0.025em;
   text-transform: none;
   color: #1a174d;
   text-align: center;
-  font-family: 'Times New Roman', Times, serif;
-
+  font-family: "Times New Roman", Times, serif;
 }
 .btn:hover {
   transform: translateY(-1px);
   color: #8898aa;
-  background-color:#32325d;
-  box-shadow: 0 7px 14px rgba(50, 50, 93, .4), 0 3px 6px rgba(0, 0, 0, .2);
+  background-color: #32325d;
+  box-shadow: 0 7px 14px rgba(50, 50, 93, 0.4), 0 3px 6px rgba(0, 0, 0, 0.2);
 }
-.form-control {
-  font-size: .875rem;
-  text-align: center;
-}
- .form-header {
+.form-header {
   text-align: center;
   margin-bottom: 20px;
 }
-.star-rating {
-  text-align: center;
-
-  font-size: 1.5em;
-}
-.star-rating input {
-  display: none;
-}
-.star-rating label {
-  color: #ddd;
-  font-size: 2em;
-  padding: 0 0.1em;
-  cursor: pointer;
-
-}
-.star-rating input:checked ~ label,
-.star-rating input:checked ~ label ~ label {
-  color: #f39c12;
-} 
-
 .contactOptions {
-  width: 25%; /* Adjust width for the additional content */
+  width: 25%;
   padding: 10px;
-
 }
 .contact-item {
   display: flex;
@@ -194,8 +171,7 @@ textarea {
   justify-content: center;
 }
 .contactImage {
-  transition: transform 0.3s ease; 
- 
+  transition: transform 0.3s ease;
 }
 .contactImage:hover img {
   transform: rotate(10deg);
@@ -206,7 +182,7 @@ textarea {
   transition: color 0.3s ease; /* Smooth transition for color change */
   display: flex;
   align-items: center;
-  width:fit-content;
+  width: fit-content;
 }
 
 .contact-item a .icon {
@@ -218,47 +194,44 @@ textarea {
   color: #007bff; /* Change color on hover */
 }
 .lastPhoto {
-  width:300px;
-   height: 300px;
-    margin-left: 50px;
+  width: 300px;
+  height: 300px;
+  margin-left: 50px;
 }
 .line {
   border-left: 1px solid rgb(93, 96, 93);
   height: 500px;
-  margin-left : 40px;
-  margin-right : 40px;
+  margin-left: 40px;
+  margin-right: 40px;
   margin-top: 40px;
   box-shadow: 0 0 10px rgba(56, 73, 109, 0.6);
-
 }
-
 
 /* Responsive View */
 @media only screen and (max-width: 426px) {
   .headerContainer {
     font-size: 70px;
-    margin-left: 20PX;
+    margin-left: 20px;
   }
- .header2 {
-  font-size: 30px;
-  text-align: center;
-  margin-left: 0;
- }
- .feedback-form-container{
-  width: 100%;
- }
- .lastPhoto {
-  width: 210px;
-  margin-left: 5px;
- }
- .contactImage {
-  margin-left: 0px;
- }
- .line {
-  display: none; /* Hide vertical line on small screens */
-}
-.contactOptions {
-  margin-left: 90px;
-
-}
+  .header2 {
+    font-size: 30px;
+    text-align: center;
+    margin-left: 0;
+  }
+  .feedback-form-container {
+    width: 100%;
+  }
+  .lastPhoto {
+    width: 210px;
+    margin-left: 5px;
+  }
+  .contactImage {
+    margin-left: 0px;
+  }
+  .line {
+    display: none; /* Hide vertical line on small screens */
+  }
+  .contactOptions {
+    margin-left: 90px;
+  }
 }
