--- a/feedback.css
+++ b/feedback.css
@@ -4,12 +4,21 @@
   width: 16px;
   /* Width of the scrollbar */
 }
+#complaintsTable th,
+#complaintsTable td {
+  border: 1px solid rgb(36, 36, 84);
+}
+#complaintsTable {
+  border-collapse: collapse;
+  font-size: 20px;
+}
 
 body {
   background-color: #f8f9fa;
   font-family: Open Sans, sans-serif;
   color: #525f7f;
   background-color: #f8f9fe;
+  font-size: 20px;
 }
 
 .container {
@@ -19,6 +28,8 @@ body {
   padding: 20px;
   font-family: "Times New Roman", Times, serif;
   overflow-x: auto;
+  width: 500px;
+  height: fit-content;
 }
 
 /* ShowMore */
@@ -62,6 +73,8 @@ body {
   display: flex;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.9);
   flex-wrap: wrap;
+  font-size: 20px;
+
   position: relative;
   justify-content: space-around;
 }
@@ -80,6 +93,7 @@ body {
   padding: 20px;
   color: #f8f9fa;
   font-size: 30px;
+
   border-radius: 10px;
 }
 
@@ -100,7 +114,6 @@ body {
 
 #complaintsTable {
   width: 100%;
-  /* Adjust as needed */
   border-collapse: collapse;
 }
 
