--- a/services.css
+++ b/services.css
@@ -32,7 +32,14 @@ body {
 .container {
   padding: 20px;
 }
-
+.ser {
+  background-color: #e9e9ee;
+  height: 250px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  margin-bottom: 3rem;
+}
 img {
   border-radius: 5px 5px 0 0;
   width: 400px;
